src/objects/Reference_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Requesting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Requesting</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reference Request</relationshipLabel>
        <relationshipName>Reference_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_email_Field__c</fullName>
        <label>CRM email Field</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DWP__c</fullName>
        <formula>TEXT(Account_Requesting__r.OverallDWP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall DWP (in Million US$)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Premiums__c</fullName>
        <formula>Text(Account_Requesting__r.Direct_Premiums__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Direct Premiums in Thousands</inlineHelpText>
        <label>Direct Premiums</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guidewire_Person_Requesting__c</fullName>
        <formula>CreatedBy.FirstName+&quot; &quot;+CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guidewire Person Requesting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gw_products_tobe_discussed_on_REF_Call__c</fullName>
        <label>Product(s) to Discuss</label>
        <picklist>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataHub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InsuranceSuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBTs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Internal_Comments_for_Team_Fulfilling__c</fullName>
        <label>Internal Comments for Team Fulfilling</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOB_s__c</fullName>
        <formula>IF(INCLUDES( Account_Requesting__r.LOBNEW__c ,&quot;Commercial&quot;),&quot;Commercial&quot;,NULL)+BR()+
IF(INCLUDES( Account_Requesting__r.LOBNEW__c ,&quot;Personal&quot;),&quot;Personal&quot;,NULL)+BR()+
IF(INCLUDES( Account_Requesting__r.LOBNEW__c ,&quot;Reinsurance&quot;),&quot;Reinsurance&quot;,NULL)+BR()+
IF(INCLUDES( Account_Requesting__r.LOBNEW__c ,&quot;Workers Compensation&quot;),&quot;Workers Compensation&quot;,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB&apos;s</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Other_Topics_to_Discuss__c</fullName>
        <label>List Other Topics to Discuss</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Longer_Needed1__c</fullName>
        <formula>IF( No_Longer_Needed__c = true, &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Longer Needed1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Longer_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Longer Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Reference_s_requested__c</fullName>
        <label>Number of Reference(s) requested</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Related To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account_Requesting__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Reference Request (Opportunity Related To)</relationshipLabel>
        <relationshipName>Reference_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <description>display stage of the opportunity from opportunity related to</description>
        <formula>text( Opportunity_Related_To__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_in_Scope__c</fullName>
        <formula>Opportunity_Related_To__r.Premium_In_Scope__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium in Scope</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Reference_Objectives__c</fullName>
        <label>Primary Objective(s) to Make Successful</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Topics_to_be_discussed__c</fullName>
        <label>Primary Topic(s) to Discuss</label>
        <picklist>
            <picklistValues>
                <fullName>Change Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOBs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners / SI’s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project / Implementation Effort &amp; Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Why Guidewire</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Attendee_Names_Titles__c</fullName>
        <label>Reference Attendee Names &amp; Titles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Contact_Prospect_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Contact (Prospect/Customer)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account_Requesting__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reference Request</relationshipLabel>
        <relationshipName>Reference_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Requested_to_Fulfill_Reference__c</fullName>
        <label>Region requested to Fulfill Reference</label>
        <picklist>
            <picklistValues>
                <fullName>AMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LatAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Category__c</fullName>
        <label>Request Category</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect/Customer Reference related to active sales cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer-to-Customer discussion not related to active sales cycle</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_by_fulfillment_date__c</fullName>
        <label>Date Requested for Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tier_Aggregate_Organization__c</fullName>
        <formula>CASE(Account_Requesting__r.RecordType.DeveloperName,
&quot;Prospect&quot;,TEXT(Account_Requesting__r.Aggregate_Org_Tier__c),
&quot;Customer&quot;,Account_Requesting__r.Tier_Aggregate_Organization__c,
NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier Aggregate Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Reference_Request__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phone Call / WebEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (User Groups, etc.)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Reference Request</label>
    <nameField>
        <displayFormat>RefReq-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Fill_the_List_Other_Topics_to_Discuss</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(
      Text( Primary_Topics_to_be_discussed__c )=&quot;Other&quot;,
     ISBLANK( List_Other_Topics_to_Discuss__c )),True,False)</errorConditionFormula>
        <errorDisplayField>List_Other_Topics_to_Discuss__c</errorDisplayField>
        <errorMessage>Please Fill The &quot;List Other Topics to Discuss&quot;</errorMessage>
    </validationRules>
</CustomObject>